selfhost/test/typechecker/identifier/error_type_mismatch_None.out
Error at %FILE_NAME%:1:20
Type mismatch
  |  val x: Int = Option.None_
                        ^
Expected: Int
but instead found: <unknown>?
