selfhost/test/typechecker/identifier/error_type_mismatch_None.abra
val x: Int = Option.None_
